user specific features done

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,6 +5,7 @@
 </head>
 <body>
     <header>
+      <h3>~Tiny App~</h3>
         <% if(user){%>
         <h1><%= `Hi there, ${user.name}` %></h1>
         <form method = "POST" action = "/logout">
