minor bug fixes

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -7,7 +7,8 @@
     <header>
       <h3>~Tiny App~</h3>
         <% if(user){%>
-        <h1><%= `Hi there, ${user.name}` %></h1>
+        <h1><%= `Hi there, ${user.name} ` %></h1>
+        <h1><%=  user.email %></h1>
         <form method = "POST" action = "/logout">
             <button>log out</button>
         </form>
