--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -14,5 +14,8 @@
         <input id="pw" type="password" name = "password" placeholder="hope you remember" >
         <button>Here I Come</button>
       </form>
+      <form method="GET" action='/register' style="margin:150px">
+        <button>Wait I have no account yet</button>
+      </form>
 </body>
 </html>
