--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -8,7 +8,7 @@
     <header>
       <% include partials/_header%>
     </header>
-      <% if(!urls){%>
+      <% if(Object.keys(urls).length === 0){%>
       <h1>You have no urls yet, add more now!</h1>
       <%}else{%>
         <ul>
