--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -4,7 +4,7 @@
   <title>TinyApp</title>
   <style>form{display:inline}</style>
 </head>
-<body>
+<body style="margin:150px">
     <header>
       <% include partials/_header%>
     </header>
