--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -3,7 +3,7 @@
 <head>
   <title>TinyApp</title>
 </head>
-<body>
+<body style="margin:150px">
     <header>
       <% include partials/_header%>
     </header>
