--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -3,11 +3,11 @@
 <head>
   <title>TinyApp</title>
 </head>
-<body>
-    <header style="margin:150px">
+<body style="margin:150px">
+    <header >
         <h1>Log In!</h1>
     </header>
-      <form method="POST" action='/login' style="margin:150px">
+      <form method="POST" action='/login' >
         <label for="em">Email: </label>
         <input id="em" type="email" name = "email" placeholder="your email" >
         <label for="pw">Password: </label>
