code clean up and improvements\n\ndebug use comments clear out. functions refactor. structure rearrange. minor new features implement

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,12 +13,8 @@
             <button>log out</button>
         </form>
         <% }else{ %>
-      <form method = "GET" action = "/login">
-        <button>login</button>
-      </form>
-      <form method = "GET" action = "/register">
-        <button>Register</button>
-      </form>
+        <a href="/login" > <button>Log in</button> </a>
+        <a href="/register" > <button>Sign up</button> </a>
       <% } %>
     </header>
 </body>
